@@ -1,3 +1,5 @@
+- Improvement: Commented line of emailForSendingEmails on DebtReportEntryBean.fillStudentInformation, because performance issues
+
 8.0.3 (22-09-2021)
 - Bug Fix: Only write ingressionType if it is set in the registration
 
